test/compile_errors/stage1/obj/indexing_an_array_of_size_zero_with_runtime_index.zig
const array = [_]u8{};
export fn foo() void {
    var index: usize = 0;
    const pointer = &array[index];
    _ = pointer;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:4:27: error: accessing a zero length array is not allowed
